<resources>
    <string name="app_name">Jeux en visio</string>
    <string name="Chargement">Chargement...</string>
    <string name="retour_l_accueil">Retour à l\'accueil</string>
    <string name="carte">carte</string>
    <string name="taches">Objectif</string>
    <string name="chargement_impossible">Chargement impossible</string>
    <string name="voir_les_cartes_de_la_table">Voir les cartes de la table</string>
    <string name="pseudo">Pseudo</string>
    <string name="raz_distribution">RAZ distribution</string>
    <string name="distribue">Distribue cartes</string>
    <string name="distribue_taches">Distribue tâches</string>
    <string name="pli_en_cours">Pli en cours</string>
    <string name="tachesAAtribuer">Tâches à attributer</string>
    <string name="jouer">Jouer</string>
    <string name="mes_cartes">Mes cartes</string>
    <string name="joueurs"><u>Sélectionne ton joueur :</u></string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="communications">Communications</string>
    <string name="refresh">REFRESH</string>
    <string name="maj_num_ro_mission">Mission suivante</string>
    <string name="echange_carte">Echange carte</string>
    <string name="echange_jeu">Echange jeu</string>
    <string name="salons"><u>Salons :</u></string>
    <string name="the_crew">THE CREW</string>
    <string name="version">V</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="sup1"><![CDATA[>]]></string>
    <string name="sup2"><![CDATA[>>]]></string>
    <string name="sup3"><![CDATA[>>>]]></string>
    <string name="sup4"><![CDATA[>>>>]]></string>
    <string name="d">D</string>
    <string name="fiesta_de_los_muertos">Fiesta de los muertos</string>
    <string name="Le_roi_des_nains">Le roi des nains</string>
    <string name="belote">Belote</string>
    <string name="Manchots_barjots">Manchots Barjots</string>
    <string name="atout">Atout</string>
    <string name="score_quipe">Score</string>
    <string name="passer">Passer</string>
    <string name="valider">Valider</string>
    <string name="personnage">Personnage</string>
    <string name="ecrit_un_mot">Ecrit un mot</string>
    <string name="mot">Mot</string>
    <string name="initialiser">Initialiser</string>
    <string name="drag_drop"><![CDATA[Drag & drop]]></string>
    <string name="double_clic">Double clic</string>
    <string name="ajout">Ajout</string>
    <string name="url">URL de la base</string>
    <string name="Administration">Administration</string>
    <string name="gambit7">Gambit 7</string>
    <string name="title_activity_settings">Paramètres</string>
    <string name="messages_header">Messages</string>
    <string name="question">Question</string>
    <string name="theme_de_la_question">theme de la question</string>
    <string name="question_1_7">Question 1/7</string>
    <string name="topten">TopTen</string>
    <string name="devoiler_ma_carte">DEVOILER MA CARTE</string>
    <string name="devoiler_les_mots">Dévoiler les mots</string>
    <string name="manche_suivante">Manche suivante</string>
    <string name="tour_suivant">Tour suivant</string>
    <string name="perdu">PERDU</string>
    <string name="une_nouvelle_version_est_disponible">Une nouvelle version est disponible <u>ici</u></string>
    <string name="majority">Majority</string>
    <string name="selection">methodeSelection</string>
    <string name="passer_au_tour_suivant">Passer au tour suivant</string>
    <string name="timeline">Timeline</string>
    <string name="majorit">Majorité</string>
    <string name="elimine">Eliminé(e)</string>
    <string name="temps_ecoule">Temps écoulé</string>
    <string name="just_one">Just One</string>
    <string name="partie_termine">Partie terminée</string>
    <string name="d_tail_de_la_carte">Détail de la carte :</string>
    <string name="scores">Scores</string>
    <string name="_8">8</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="partie_suivante">Partie suivante</string>
    <string name="action_settings">Settings</string>
    <string name="choisi_un_num_ro"><u>Choisi un numéro :</u></string>
    <string name="bonne_reponse">Bonne réponse</string>
    <string name="echec">Mauvaise réponse</string>
    <string name="score">Score </string>
    <string name="tour">Tour </string>
    <string name="Whaaat">Whaaat ?</string>
    <string name="exemple_whaaat">Une soirée romantique aux chandelles</string>
    <string name="choisi_une_equipe">Choisi une équipe :</string>
    <string name="bleu">bleu</string>
    <string name="jaune">jaune</string>
    <string name="mauvaise_reponse">Mauvaise réponse</string>
</resources>
