<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.pigredorou.jeuxenvisio.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/the_crew"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Spinner
            android:id="@+id/liste_salons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />

        <Spinner
            android:id="@+id/liste_joueurs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/boutonValider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/black_overlay"
        android:padding="5dp"
        android:text="@string/jouer"
        android:textColor="@color/blanc"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/joueurs"
            android:textSize="20sp"/>

        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkMark="@drawable/icone_check"
            android:text="Pigre   "
            android:textAlignment="textStart" />
        <CheckedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checked="true"
            android:checkMark="@drawable/icone_check"
            android:checkMarkTint="@color/blanc"
            android:text="Fievel  "
            android:textAlignment="textStart" />
    </LinearLayout>
    <Button
        android:id="@+id/boutonRAZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/black_overlay"
        android:padding="5dp"
        android:text="@string/raz_distribution"
        android:textColor="@color/blanc"
        android:textSize="20sp" />

    <Button
        android:id="@+id/boutonDistribue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/black_overlay"
        android:padding="5dp"
        android:text="@string/distribue"
        android:textColor="@color/blanc"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>
        <Button
            android:id="@+id/boutonNbTacheMoins"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:layout_marginTop="10dp"
            android:background="@color/black_overlay"
            android:text="@string/moins"
            android:textColor="@color/blanc"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/nbTache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:layout_marginTop="10dp"
            android:textColor="@color/blanc"
            android:text="@string/_1"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/boutonNbTachePlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"
            android:layout_marginTop="10dp"
            android:background="@color/black_overlay"
            android:text="@string/plus"
            android:textColor="@color/blanc"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".2"/>

    </LinearLayout>

    <Button
        android:id="@+id/boutonDistribueTache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/black_overlay"
        android:padding="5dp"
        android:text="@string/distribue_taches"
        android:textColor="@color/blanc"
        android:textSize="20sp" />
</LinearLayout>