<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_ecran_just_one"
    android:orientation="vertical"
    tools:context=".JustOneActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/entete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/just_one_arc_en_ciel"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/titre_jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/noir_transparent"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/just_one"
            android:textAlignment="center"
            android:textColor="@color/blanc"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/bouton_retour"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/retour_l_accueil"
            android:src="@drawable/bouton_quitter"
            android:tag="bouton_retour"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nom_salon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/app_name"
            android:textAlignment="textEnd"
            android:textColor="@color/blanc"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/bouton_retour"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/pseudo"
            android:textAlignment="textEnd"
            android:textColor="@color/blanc"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/chargement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/texteChargement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Chargement"
            android:textAlignment="center"
            android:textColor="@color/blanc"
            android:textSize="50sp" />

        <ProgressBar
            android:id="@+id/barreDeChargement"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bloc_carte_liste_mots_et_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bloc_carte_liste_mots"
            android:layout_width="0dp"
            android:layout_height="250sp"
            android:layout_weight="0.5">

            <ImageView
                android:id="@+id/carte_mots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:adjustViewBounds="true"
                android:background="@drawable/fond_carte_blanc"
                android:padding="10sp"
                android:src="@drawable/just_one_carte_mots"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/mot_1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.2"
                    android:text="@string/Chargement"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/noir"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mot_2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.2"
                    android:text="@string/Chargement"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/noir"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mot_3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.2"
                    android:text="@string/Chargement"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/noir"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mot_4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.2"
                    android:text="@string/Chargement"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/noir"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/mot_5"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.2"
                    android:text="@string/Chargement"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/noir"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/bloc_logo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/just_one_carte_logo"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tour"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/tour"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/noir_transparent" />

            <ImageView
                android:id="@+id/vote_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <ImageView
                android:id="@+id/vote_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <ImageView
                android:id="@+id/vote_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:text="@string/score"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/noir_transparent" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/choix_numero_texte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choisi_un_num_ro"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/choix_numero_chiffres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/choix_1"
            android:tag="choix_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/_1"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choix_2"
            android:tag="choix_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/_2"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choix_3"
            android:tag="choix_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/_3"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choix_4"
            android:tag="choix_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/_4"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/choix_5"
            android:tag="choix_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/_5"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/zone_saisie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/just_one_chevalet"
        android:hint="@string/ecrit_un_mot"
        android:maxLines="1"
        android:padding="10dp"
        android:tag="zone_saisie"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/noir"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nb_vote_joueurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Chargement"
        android:textAlignment="center"
        android:textColor="@color/noir_transparent"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bouton_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/noir_transparent"
        android:tag="bouton_valider"
        android:text="@string/valider"
        android:textColor="@color/blanc" />

    <LinearLayout
        android:id="@+id/bloc_validation_reponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bouton_reussite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@color/noir_transparent"
            android:tag="bouton_reussite"
            android:text="@string/bonne_reponse"
            android:textColor="@color/blanc" />

        <Button
            android:id="@+id/bouton_echec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@color/noir_transparent"
            android:tag="bouton_echec"
            android:text="@string/echec"
            android:textColor="@color/blanc" />

        <Button
            android:id="@+id/bouton_passer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@color/noir_transparent"
            android:tag="bouton_passer"
            android:text="@string/passer"
            android:textColor="@color/blanc" />
    </LinearLayout>

    <Button
        android:id="@+id/bouton_manche_suivante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@color/noir_transparent"
        android:tag="bouton_suivant"
        android:text="@string/manche_suivante"
        android:textColor="@color/blanc"
        android:visibility="gone" />
</LinearLayout>