<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/couleurTopTen"
    android:orientation="vertical"
    tools:context=".TopTenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/entete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bouton_retour"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/retour_l_accueil"
            android:src="@drawable/bouton_quitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nom_salon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/app_name"
            android:textAlignment="textEnd"
            android:textColor="@color/blanc"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/bouton_retour"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titre_jeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/topten"
            android:textAlignment="center"
            android:textColor="@color/blanc"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/bouton_retour"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/pseudo"
            android:textAlignment="textEnd"
            android:textColor="@color/blanc"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/tapis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/topten_tapis" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/carte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/topten_1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/devoiler_ma_carte"
            android:textColor="@color/couleurTopTen"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>